--- a/templates/clean_white/font/font.css
+++ b/templates/clean_white/font/font.css
@@ -2,7 +2,7 @@
 @font-face {
     font-family: 'AllerBold';
     src: url('aller_bd-webfont.eot');
-    src: url('aller_bd-webfont.eot') format('embedded-opentype'),
+    src: url('aller_bd-webfont.eot?#iefix') format('embedded-opentype'),
          url('aller_bd-webfont.woff') format('woff'),
          url('aller_bd-webfont.ttf') format('truetype'),
          url('aller_bd-webfont.svg#AllerBold') format('svg');
@@ -13,7 +13,7 @@
 @font-face {
     font-family: 'AllerRegular';
     src: url('aller_rg-webfont.eot');
-    src: url('aller_rg-webfont.eot') format('embedded-opentype'),
+    src: url('aller_rg-webfont.eot?#iefix') format('embedded-opentype'),
          url('aller_rg-webfont.woff') format('woff'),
          url('aller_rg-webfont.ttf') format('truetype'),
          url('aller_rg-webfont.svg#AllerRegular') format('svg');
