--- a/templates/big_blue/style.css
+++ b/templates/big_blue/style.css
@@ -57,7 +57,7 @@
     color: #FFF;
     display: block;
     float: left;
-    padding: 0 15px;
+    padding: 0 5px;
     border: none;
     width: 60%;
     height: 30px;
@@ -90,4 +90,10 @@
     border-radius: 13px;
     -webkit-box-shadow: inset 1px 0 1px 1px #6b95a9;
     box-shadow: inset 1px 0 1px 1px #6b95a9;
+}
+
+#stbMsgArea {
+    display: none;
+    padding: 10px 0 0;
+    margin: 0;
 }
