--- a/templates/clean_white/style.css
+++ b/templates/clean_white/style.css
@@ -92,3 +92,9 @@
     -webkit-box-shadow:  0px 0px 0px 4px #d3d2d2;
     box-shadow:  0px 0px 0px 4px #d3d2d2;
 }
+
+#stbMsgArea {
+    display: none;
+    padding: 10px 0 0;
+    margin: 0;
+}
