--- a/trunk/templates/default/style.css
+++ b/trunk/templates/default/style.css
@@ -111,3 +111,10 @@
 #scrolldriggered #closebox:hover{
     background:#bba137;
 }
+
+
+#stbMsgArea {
+    display: none;
+    padding: 10px 0 0;
+    margin: 0;
+}
