--- a/trunk/templates/big_blue/style.css
+++ b/trunk/templates/big_blue/style.css
@@ -8,5 +8,11 @@
 #scrolltriggered #inscroll form input { line-height: 30px; background-color: #282d34; -webkit-border-radius: 5px; border-radius: 5px; color: #FFF; display: block; float: left; padding: 0 5px; border: none; width: 60%; height: 30px; -webkit-box-shadow: 0px 1px 0px 1px #93b3c2; box-shadow: 0px 1px 0px 1px #93b3c2; }
 #scrolltriggered #inscroll form input.submit, #scrolltriggered #inscroll form input[type=submit] { background-color: #be1616 !important; width: 33% !important; cursor: pointer; float: right !important; }
 #scrolltriggered #inscroll form input.submit:hover, #scrolltriggered #inscroll form input[type=submit]:hover { background-color: #db1010 !important; }
-#scrolltriggered #closebox { position: absolute; top: 8px; right: 8px; background-color: #497387; width: 26px; height: 26px; color: #FFF; font-size: 16px; font-family: Tahoma, Geneva, sans-serif; text-align: center; text-decoration: none; -webkit-border-radius: 13px; border-radius: 13px; -webkit-box-shadow: inset 1px 0 1px 1px #6b95a9; box-shadow: inset 1px 0 1px 1px #6b95a9; }
+#scrolltriggered #inscroll ul.stb_social { overflow: hidden; margin: 10px -7px 0 0; clear: both; }
+#scrolltriggered #inscroll ul.stb_social li { float: left; list-style: none; background: none; padding: 0; height: 30px; margin: 0 7px 0 0; }
+#scrolltriggered #inscroll ul.stb_social li.fb.standard { width: 45px; overflow: hidden; }
+#scrolltriggered #inscroll ul.stb_social li.twitter.regular { width: 80px; }
+#scrolltriggered #inscroll ul.stb_social li.google.medium { width: 60px; }
+#scrolltriggered #inscroll ul.stb_social li.fb.box_count, #scrolltriggered #inscroll ul.stb_social li.google.tall, #scrolltriggered #inscroll ul.stb_social li.twitter.vertical, #scrolltriggered #inscroll ul.stb_social li.linkedin.top, #scrolltriggered #inscroll ul.stb_social li.stumbleupon.s5, #scrolltriggered #inscroll ul.stb_social li.pinterest.vertical { height: 66px !important; }
+#scrolltriggered #closebox { z-index: 1001; position: absolute; top: 8px; right: 8px; background-color: #497387; width: 26px; height: 26px; color: #FFF; font-size: 16px; font-family: Tahoma, Geneva, sans-serif; text-align: center; text-decoration: none; -webkit-border-radius: 13px; border-radius: 13px; -webkit-box-shadow: inset 1px 0 1px 1px #6b95a9; box-shadow: inset 1px 0 1px 1px #6b95a9; }
 #scrolltriggered #stbMsgArea { display: none; padding: 10px 0 0; margin: 0; }
