--- a/trunk/templates/grass_green/style.css
+++ b/trunk/templates/grass_green/style.css
@@ -8,6 +8,12 @@
 #scrolltriggered #inscroll form input { line-height: 30px; background-color: #e5e5e5; -webkit-border-radius: 5px; border-radius: 5px; color: #7a7a7a; display: block; float: left; padding: 0 10px; border: solid 1px #5c8e2c; width: 57%; outline: none; height: 30px; }
 #scrolltriggered #inscroll form input.submit, #scrolltriggered #inscroll form input[type=submit] { background-color: #be1616 !important; width: 33% !important; height: 32px !important; cursor: pointer; float: right !important; color: #FFF !important; }
 #scrolltriggered #inscroll form input.submit:hover, #scrolltriggered #inscroll form input[type=submit]:hover { background-color: #db1010 !important; }
-#scrolltriggered #closebox { position: absolute; top: 8px; right: 8px; background-color: #609130; width: 20px; height: 20px; color: #FFF; font-size: 13px; font-family: Tahoma, Geneva, sans-serif; text-align: center; text-decoration: none; -webkit-border-radius: 10px; border-radius: 10px; -webkit-box-shadow: 0px 0px 0px 4px #88ac62; box-shadow: 0px 0px 0px 4px #88ac62; line-height: 18px; }
+#scrolltriggered #inscroll ul.stb_social { overflow: hidden; margin: 10px -7px 0 0; clear: both; }
+#scrolltriggered #inscroll ul.stb_social li { float: left; list-style: none; background: none; padding: 0; height: 30px; margin: 0 7px 0 0; }
+#scrolltriggered #inscroll ul.stb_social li.fb.standard { width: 45px; overflow: hidden; }
+#scrolltriggered #inscroll ul.stb_social li.twitter.regular { width: 80px; }
+#scrolltriggered #inscroll ul.stb_social li.google.medium { width: 60px; }
+#scrolltriggered #inscroll ul.stb_social li.fb.box_count, #scrolltriggered #inscroll ul.stb_social li.google.tall, #scrolltriggered #inscroll ul.stb_social li.twitter.vertical, #scrolltriggered #inscroll ul.stb_social li.linkedin.top, #scrolltriggered #inscroll ul.stb_social li.stumbleupon.s5, #scrolltriggered #inscroll ul.stb_social li.pinterest.vertical { height: 66px !important; }
+#scrolltriggered #closebox { z-index: 1001; position: absolute; top: 8px; right: 8px; background-color: #609130; width: 20px; height: 20px; color: #FFF; font-size: 13px; font-family: Tahoma, Geneva, sans-serif; text-align: center; text-decoration: none; -webkit-border-radius: 10px; border-radius: 10px; -webkit-box-shadow: 0px 0px 0px 4px #88ac62; box-shadow: 0px 0px 0px 4px #88ac62; line-height: 18px; }
 #scrolltriggered #closebox:hover { -webkit-box-shadow: 0px 0px 0px 4px #94b373; box-shadow: 0px 0px 0px 4px #94b373; }
 #scrolltriggered #stbMsgArea { display: none; padding: 10px 0 0; margin: 0; }
