--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -19,4 +19,10 @@ ul#dgd_tabs li { display: inline; color: #42454a; background-color: #dedbde; bor
 ul#dgd_tabs li:hover { background-color: #f1f0ee; }
 ul#dgd_tabs li.selected { color: #000; background-color: #f1f0ee; font-weight: bold; padding: 0.7em 0.3em 0.38em 0.3em; }
 div.dgd_tab_container .dgd_tab_content { border: 1px solid #c9c3ba; padding: 0.5em; background-color: #f1f0ee; }
+div.dgd_tab_container td {  vertical-align: top; width: 30%; }
+div.dgd_tab_container .dgd_tab_content .thirdcolumn { width: 33%; float: left }
+div.dgd_tab_container select {  box-sizing: border-box; width: 95%; }
+
 div.dgd_tab_container .hide { display: none; }
+.dgd_clear { clear: both }
+.dgd_text_input { box-sizing: border-box; width: 100%; }
