New developments tested on WP3.0 New custom triggering options (time delay, element mouseover, element click) Added auto close option
git-svn-id: https://plugins.svn.wordpress.org/dreamgrow-scroll-triggered-box/trunk@1059052 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -21,7 +21,7 @@ ul#dgd_tabs li.selected { color: #000; background-color: #f1f0ee; font-weight: b
 div.dgd_tab_container .dgd_tab_content { border: 1px solid #c9c3ba; padding: 0.5em; background-color: #f1f0ee; }
 div.dgd_tab_container td {  vertical-align: top; width: 30%; }
 div.dgd_tab_container .dgd_tab_content .thirdcolumn { width: 33%; float: left }
-div.dgd_tab_container select {  box-sizing: border-box; width: 95%; }
+div.dgd_tab_container select {  box-sizing: border-box; width: 95%; height: 10em !important; }
 
 div.dgd_tab_container .hide { display: none; }
 .dgd_clear { clear: both }
