"Tab" functionality added
git-svn-id: https://plugins.svn.wordpress.org/dreamgrow-scroll-triggered-box/trunk@1097974 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.dgd_stb_box {
+.dgd_stb_box, .dgd_stb_tab {
     z-index:100000; /* wpadminbar is 99999, needs to appear on top of this */
     display: none;
     position:fixed;
@@ -26,5 +26,9 @@
     display: block !important; 
     bottom: none !important; 
     z-index: auto !important; 
-    position: static !important 
+    position: static !important;
+}
+
+.dgd_stb_tab {
+    cursor: pointer;
 }
