--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -1,5 +1,7 @@
 .dgd_stb_box.default { 
-	background-color: #ffe14f; font-size: 15px; border: solid 3px #FFF; 
+	background-color: #ffe14f; 
+	font-size: 15px; 
+	border: solid 3px #FFF; 
 	box-shadow: 0px 0px 0px 10px rgba(0, 0, 0, 0.1); 
 	border-radius: 0px 
 }
@@ -43,3 +45,11 @@
 
 
 .dgd_stb_box.default .stbMsgArea { display: none; padding: 10px 0 0; margin: 0; }
+
+.dgd_stb_box.default.dgd_stb_tab {
+	box-shadow: 0px 0px 0px 3px rgba(0, 0, 0, 0.1); 
+	padding: 2px 10px;
+	font-size: 12px;
+	line-height: 12px;
+	border: solid 1px #FFF;
+}
