Bugfix: menu_position not being integer; Added: Preview button functionality;
git-svn-id: https://plugins.svn.wordpress.org/dreamgrow-scroll-triggered-box/trunk@1123029 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -26,3 +26,30 @@ div.dgd_tab_container .hide { display: none; }
 .dgd_text_input { box-sizing: border-box; width: 100%; }
 
 :checked + .dgd_checkalert { color: red; font-weight: bold; }
+
+#previewFrame {
+	position: absolute;
+	right: 0px;
+	top: 0px;
+	z-index: 100000;
+	width: 100%;
+	height: 100%;
+	border: solid black 1px;
+	background: rgba(0, 0, 0, 0.5);
+	visibility: hidden;
+	opacity: 0;
+}
+
+#previewFrame.activate {
+	visibility: visible;
+	opacity: 1;
+}
+
+#donate {
+	position: fixed;
+	right: 20px;
+	bottom: 10px;
+	width: 280px;
+	border: solid black 1px;
+	background-color: white;
+}
