Bugfix: Tabs are made a bit bigger, Tab text size follows theme; Bugfix: Html entities encoding in html enabled fields; Bugfix: Error 404 in "I'm using my own theme"; Bugfix: Cookie uses absolute path path=/; Bugfix: PHP notifications and debug info review:
git-svn-id: https://plugins.svn.wordpress.org/dreamgrow-scroll-triggered-box/trunk@1124150 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -46,3 +46,7 @@ div.dgd_tab_container .hide { display: none; }
 .dgd_preview_mode {
     overflow: hidden;
 }
+
+.dgd_donate_button {
+    cursor: pointer; cursor: hand;
+}
