--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -47,9 +47,8 @@
 .dgd_stb_box.default .stbMsgArea { display: none; padding: 10px 0 0; margin: 0; }
 
 .dgd_stb_box.default.dgd_stb_tab {
-	box-shadow: 0px 0px 0px 3px rgba(0, 0, 0, 0.1); 
-	padding: 2px 10px;
-	font-size: 12px;
-	line-height: 12px;
-	border: solid 1px #FFF;
+    box-shadow: 0px 0px 0px 3px rgba(0, 0, 0, 0.1); 
+    padding: 2px 10px;
+    line-height: 1.2em;
+    border: solid 1px #FFF;
 }
