--- a/themes/grass_green/style.css
+++ b/themes/grass_green/style.css
@@ -45,8 +45,7 @@
 .dgd_stb_box.grass_green .stbMsgArea { display: none; padding: 10px 0 0; margin: 0; }
 
 .dgd_stb_box.grass_green.dgd_stb_tab {
-	box-shadow: 0px 0px 0px 3px rgba(0, 0, 0, 0.1); 
-	padding: 2px 10px;
-	font-size: 12px;
-	line-height: 12px;
+    box-shadow: 0px 0px 0px 3px rgba(0, 0, 0, 0.1); 
+    padding: 2px 10px;
+    line-height: 1.2em;
 }
